Virtual threads completed getReport